--- a/css/main.css
+++ b/css/main.css
@@ -142,7 +142,7 @@ h1, h2, h3, p {
     -webkit-transition-duration: 250ms;
             transition-duration: 250ms;
   }
-  .site-nav__link:current {
+  .site-nav__link--current {
     color: var(--accent-text);
   }
   .site-list {
@@ -239,8 +239,8 @@ h1, h2, h3, p {
   .header-menu__btn.is-open .header-menu__icon-menu {
     display: none;
   }
-  .header-menu__icon-cross:hover,
-  .header-menu__icon-cross:focus {
+  .header-menu__btn:hover,
+  .header-menu__btn:focus {
     fill: var(--accent-text);
   }
   .header-menu {
@@ -1110,6 +1110,74 @@ textarea:focus {
 }
 
 /*Filter button*/
+@media screen and (min-width: 480px) {
+  .filter-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 50px;
+    padding: 0;
+  }
+  .action-icon {
+    width: 100%;
+    height: 295px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filter-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 50px;
+    padding: 0;
+  }
+  .action-icon {
+    width: 370px;
+    height: 295px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .filter-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .action-icon {
+    width: 370px;
+    height: 295px;
+  }
+}
+
 .filter-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2019,43 +2087,75 @@ textarea:focus {
 }
 
 /*Progect*/
-.project-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin: 0;
+@media screen and (min-width: 480px) {
+  .project-list {
+    display: block;
+    margin: 0;
+  }
+  .project-list_item {
+    width: 100%;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .project-list__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
-.project-list_item {
-  width: 370px;
-  height: 398px;
-  margin-left: 0;
-  margin-right: 30px;
-  margin-bottom: 30px;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
+@media screen and (min-width: 768px) {
+  .project-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: 0;
+    margin: -15px;
+  }
+  .project-list_item {
+    width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
-.project-list_item:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.project-list_item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-
-.project-list_item:hover, .project-list_item:focus {
-  -webkit-box-shadow: 0px 4px 4px 0px #00000040;
-          box-shadow: 0px 4px 4px 0px #00000040;
-}
-
-.project-list_item:hover .poster-text-hover {
-  -webkit-transform: translateY(0%);
-          transform: translateY(0%);
+@media screen and (min-width: 1200px) {
+  .project-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: 0;
+  }
+  .project-list_item {
+    width: 370px;
+    height: 398px;
+    margin-left: 0;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-transition-duration: 250ms;
+            transition-duration: 250ms;
+  }
+  .project-list_item:nth-child(3n) {
+    margin-right: 0px;
+  }
+  .project-list_item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
+  .project-list_item:hover, .project-list_item:focus {
+    -webkit-box-shadow: 0px 4px 4px 0px #00000040;
+            box-shadow: 0px 4px 4px 0px #00000040;
+  }
+  .project-list_item:hover .poster-text-hover {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
 }
 
 .bloc {
