--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -45,6 +45,49 @@
 // filter //
   /*Filter button*/
 
+  
+  @media screen and (min-width: 480px) {
+        
+  .filter-list { 
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: start;
+    list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 50px;
+    padding: 0; 
+    }   
+    &__item:not(:last-child) {
+        margin-bottom: 15px;
+        }
+    }
+
+    @media screen and (min-width: 768px) {
+     
+  .filter-list {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    justify-content: center;
+    list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 50px;
+    padding: 0;  
+    }
+  
+    }
+
+    @media screen and (min-width: 1200px) {
+        
+  .filter-list {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    justify-content: center;    
+    }
+    }
+
   .filter-list {
     display: flex;
     align-items: center;
