--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -34,7 +34,7 @@
             transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
             transition-duration: 250ms;
         }
-         &__link:current {
+         &__link--current {
             color: var(--accent-text);
         }
 }
@@ -120,8 +120,8 @@
     .header-menu__btn.is-open .header-menu__icon-menu {
         display: none;
     }
-    .header-menu__icon-cross:hover,
-    .header-menu__icon-cross:focus {
+    .header-menu__btn:hover,
+    .header-menu__btn:focus {
         fill: var(--accent-text)
     }
     .header-menu {               
