--- a/sass/layouts/_project.scss
+++ b/sass/layouts/_project.scss
@@ -1,5 +1,49 @@
 
        /*Progect*/
+
+       @media screen and (min-width: 480px) and (max-width: 767px)  {
+      
+       .project-list {
+        display: block;     
+        margin: 0; 
+
+        &_item {   
+        width: 100%;
+        align-self: center;        
+        }
+        &__item:not(:last-child) {
+            margin-bottom: 30px;
+        }
+    }
+        .action-icon {
+            width: 100%;
+            height: 295px;
+        }
+       
+    }
+
+       @media screen and (min-width: 768px) and (max-width: 1199px) {
+        
+       .project-list {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0;
+        margin: -15px;
+        
+        &_item {   
+            width: calc((100% - 4 * 15px) / 2); 
+            margin: 15px;    
+            align-items: center; 
+    }
+       }
+       .action-icon {
+        width: 370px;
+        height: 295px;
+    }
+    }
+
+       @media screen and (min-width: 1200px) {
+      
        .project-list {
         display: flex;
         flex-wrap: wrap;
@@ -28,7 +72,12 @@
         &_item:hover .poster-text-hover {
             transform: translateY(0%); 
         }
-    }        
+    }    
+    .action-icon {
+        width: 370px;
+        height: 295px;
+    }
+}
     .bloc {
         display: block;
         width: 370px;
