--- a/css/main.css
+++ b/css/main.css
@@ -1125,12 +1125,11 @@ textarea:focus {
             justify-content: start;
     list-style-type: none;
     margin-top: 0;
-    margin-bottom: 50px;
+    margin-bottom: 38px;
     padding: 0;
   }
-  .action-icon {
-    width: 100%;
-    height: 295px;
+  .filter-list__item {
+    margin-bottom: 12px;
   }
 }
 
@@ -1152,10 +1151,6 @@ textarea:focus {
     margin-bottom: 50px;
     padding: 0;
   }
-  .action-icon {
-    width: 370px;
-    height: 295px;
-  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1172,24 +1167,9 @@ textarea:focus {
         -ms-flex-pack: center;
             justify-content: center;
   }
-  .action-icon {
-    width: 370px;
-    height: 295px;
-  }
 }
 
 .filter-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   list-style-type: none;
   margin-top: 0;
   margin-bottom: 50px;
@@ -1198,6 +1178,10 @@ textarea:focus {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   -webkit-transition-duration: 250ms;
           transition-duration: 250ms;
+}
+
+.filter-list__item {
+  margin-top: 0;
 }
 
 .filter-list__item:not(:last-child) {
@@ -1358,11 +1342,11 @@ textarea:focus {
 }
 
 @media screen and (min-width: 768px) {
-  .join .join {
+  .join {
     display: block;
     padding: 0;
     margin-left: 0;
-    margin-left: 165px;
+    margin-right: 93px;
     width: 206px;
   }
   .join-list {
@@ -1373,7 +1357,7 @@ textarea:focus {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    width: 206;
+    width: 206px;
   }
   .join-list__item {
     margin-right: 10px;
@@ -1420,6 +1404,16 @@ textarea:focus {
   .join-list__icon:hover, .join-list__icon:focus {
     fill: #FFFFFF;
   }
+}
+
+.join__titl {
+  margin-bottom: 20px;
+  color: var(--bgr-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 3%;
+  text-transform: uppercase;
 }
 
 @media screen and (min-width: 1200px) {
@@ -1654,15 +1648,38 @@ textarea:focus {
 }
 
 /*Hero*/
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .hero {
+    max-width: 100%;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/images/images1/hero/hero2.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/images1/hero/hero2.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .hero {
+    max-width: 100%;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/images/images1/hero/hero.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/images1/hero/hero.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/images/images1/hero/hero.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/images1/hero/hero.jpg);
+  }
+}
+
 .hero {
   position: relative;
-  max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 200px;
   padding-bottom: 200px;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/images1/hero.jpg);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/images1/hero.jpg);
+  max-width: 1600px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/images/images1/hero/hero2.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/images1/hero/hero2.jpg);
   background-color: var(--bgr-color);
   background-repeat: no-repeat;
   background-position: center;
@@ -1912,12 +1929,6 @@ textarea:focus {
   .team-list__item:not(:last-child) {
     margin-bottom: 30px;
   }
-  /* .team-list__img {
-        width: 100%;
-        height: 460px;
-        margin: 0;
-        padding: 0;
-    }*/
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -2087,7 +2098,7 @@ textarea:focus {
 }
 
 /*Progect*/
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .project-list {
     display: block;
     margin: 0;
@@ -2097,13 +2108,21 @@ textarea:focus {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
-  }
-  .project-list__item:not(:last-child) {
     margin-bottom: 30px;
+  }
+  .project-list__item:last-child {
+    margin-bottom: 0;
+  }
+  .action-icon {
+    width: 100%;
+    height: 295px;
+  }
+  .bloc {
+    width: 100%;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .project-list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -2114,11 +2133,28 @@ textarea:focus {
     margin: -15px;
   }
   .project-list_item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: calc((100% - 4 * 15px) / 2);
     margin: 15px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+  .action-icon {
+    width: 100%;
+    height: 295px;
+  }
+  .bloc {
+    width: 100%;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
   }
 }
 
@@ -2156,11 +2192,17 @@ textarea:focus {
     -webkit-transform: translateY(0%);
             transform: translateY(0%);
   }
+  .action-icon {
+    width: 370px;
+    height: 295px;
+  }
+  .bloc {
+    width: 370px;
+  }
 }
 
 .bloc {
   display: block;
-  width: 370px;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-right: 24px;
@@ -2187,8 +2229,6 @@ textarea:focus {
 
 .action {
   position: relative;
-  width: 370px;
-  height: 295px;
   overflow: hidden;
 }
 
