--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -55,13 +55,14 @@
     justify-content: start;
     list-style-type: none;
     margin-top: 0;
-    margin-bottom: 50px;
+    margin-bottom: 38px;
     padding: 0; 
-    }   
-    &__item:not(:last-child) {
-        margin-bottom: 15px;
-        }
+    
+    &__item {
+      margin-bottom: 12px;
     }
+    }
+  }
 
     @media screen and (min-width: 768px) {
      
@@ -75,6 +76,7 @@
     margin-bottom: 50px;
     padding: 0;  
     }
+    
   
     }
 
@@ -89,10 +91,7 @@
     }
 
   .filter-list {
-    display: flex;
-    align-items: center;
-    flex-wrap: nowrap;
-    justify-content: center;
+ 
     list-style-type: none;
     margin-top: 0;
     margin-bottom: 50px;
@@ -101,6 +100,9 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 250ms;
 
+    &__item {
+      margin-top: 0;
+    }
     &__item:not(:last-child) {
     margin-right: 8px;
     }
