--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,16 +1,40 @@
 
         /*Hero*/
-        .hero {
-            position: relative;
-            max-width: 1600px;
+        @media screen and (min-width: 480px) and (max-width: 767px)  {
+            .hero {
+                max-width: 100%;
+                background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                url(/images/images1/hero/hero2.jpg);
+            }
+        }
+
+
+        @media screen and (min-width: 768px) and (max-width: 1199px)  {
+            .hero {
+                max-width: 100%;
+                background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                url(/images/images1/hero/hero.jpg);
+            }
+        }
+
+
+        @media screen and (min-width: 1200px) {
+            .hero {
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            url(/images/images1/hero/hero.jpg);
+            }
+        }
+
+        .hero {            
+            position: relative;          
             margin-left: auto;
             margin-right: auto;
             padding-top: 200px;
-            padding-bottom: 200px;
+            padding-bottom: 200px;   
+            max-width: 1600px;
             background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url(../images/images1/hero.jpg);
-            background-color: var(--bgr-color);
-        
+            url(/images/images1/hero/hero2.jpg);
+            background-color: var(--bgr-color);        
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
