--- a/sass/layouts/_project.scss
+++ b/sass/layouts/_project.scss
@@ -9,17 +9,20 @@
 
         &_item {   
         width: 100%;
-        align-self: center;        
+        align-self: center;   
+        margin-bottom: 30px;     
         }
-        &__item:not(:last-child) {
-            margin-bottom: 30px;
+      &__item:last-child {
+            margin-bottom: 0;
         }
     }
-        .action-icon {
+         .action-icon {
             width: 100%;
             height: 295px;
         }
-       
+        .bloc {            
+            width: 100%;
+        }       
     }
 
        @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -31,15 +34,21 @@
         margin: -15px;
         
         &_item {   
+            display: flex;
+            flex-direction: column;
             width: calc((100% - 4 * 15px) / 2); 
             margin: 15px;    
             align-items: center; 
     }
        }
        .action-icon {
-        width: 370px;
+        width: 100%;
         height: 295px;
     }
+    .bloc {
+        width: 100%;
+        flex-grow: 1;
+         }
     }
 
        @media screen and (min-width: 1200px) {
@@ -73,14 +82,16 @@
             transform: translateY(0%); 
         }
     }    
-    .action-icon {
+    .action-icon {       
         width: 370px;
         height: 295px;
     }
+    .bloc {
+        width: 370px;
+    }
 }
     .bloc {
-        display: block;
-        width: 370px;
+        display: block;       
         padding-top: 20px;
         padding-bottom: 20px;
         padding-right: 24px;
@@ -99,15 +110,13 @@
         }
         &__text {
             margin: 0;
-        color: var(--text-color);
+            color: var(--text-color);
             font-size: 16px;
             line-height: 1.88;
         }
-}
+    }
     .action {
-       position: relative;
-        width: 370px;
-        height: 295px;  
+       position: relative;      
         overflow: hidden;
     }
     .poster-text-hover {
