--- a/css/main.css
+++ b/css/main.css
@@ -1956,7 +1956,7 @@ textarea:focus {
 /*Hero*/
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: url("/images/images1/hero/hero2.jpg");
+    background-image: url("./images/images1/hero/hero2.jpg");
   }
 }
 
@@ -1967,8 +1967,8 @@ textarea:focus {
   padding-top: 200px;
   padding-bottom: 200px;
   max-width: 1600px;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/images1/hero/hero.jpg");
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/images1/hero/hero.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("./images/images1/hero/hero/hero1.jpg");
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("./images/images1/hero/hero/hero1.jpg");
   background-color: var(--bgr-color);
   background-repeat: no-repeat;
   background-position: center;
