--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -5,7 +5,7 @@
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
         .hero {
-          background-image: url('/images/images1/hero/hero2.jpg');
+          background-image: url('./images/images1/hero/hero2.jpg');
         }
       }
         
@@ -17,7 +17,7 @@
             padding-bottom: 200px;   
             max-width: 1600px;
             background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url('/images/images1/hero/hero.jpg');
+            url('./images/images1/hero/hero/hero1.jpg');
             background-color: var(--bgr-color);        
             background-repeat: no-repeat;
             background-position: center;
