--- a/css/main.css
+++ b/css/main.css
@@ -1843,6 +1843,7 @@ textarea:focus {
         flex-wrap: wrap;
   }
   .box-logo {
+    margin-right: 70px;
     text-align: center;
     padding: 0;
   }
@@ -2396,6 +2397,9 @@ textarea:focus {
   }
   .clients-list__item {
     width: calc((100% - 6 * 30px) / 6);
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 0;
   }
   .clients-list__item:not(:last-child) {
     margin-right: 30px;
