--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -51,7 +51,7 @@
          flex-wrap: wrap;
           }
      .box-logo {
-        
+        margin-right: 70px;
         text-align: center;      
         padding: 0;       
     }
