--- a/sass/layouts/_partners.scss
+++ b/sass/layouts/_partners.scss
@@ -44,6 +44,9 @@
    
     &__item {
         width: calc((100% - 6 * 30px) / 6);
+        margin-top: 0;
+        margin-bottom: 0;
+        margin-left: 0;
      }
     &__item:not(:last-child) {
         margin-right: 30px;
