--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -3,29 +3,29 @@
 
         @media (min-resolution: 2dppx) {       
         .hero {
-          background-image: url('/images/images1/hero/hero2480.jpg');
+          background-image: url('../images/images1/hero/hero2480.jpg');
         }
       }
 
       @media screen and (min-width: 768px) {
         .hero {
             background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url('/images/images1/hero/hero1768.jpg');
+            url('../images/images1/hero/hero1768.jpg');
         }
         @media (min-resolution: 2dppx) {       
             .hero {
-              background-image: url('/images/images1/hero/hero2768.jpg');
+              background-image: url('../images/images1/hero/hero2768.jpg');
             }
           }
       }
       @media screen and (min-width: 1200px) {
         .hero {
             background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url('/images/images1/hero/hero11200.jpg');
+            url('../images/images1/hero/hero11200.jpg');
         }
         @media (min-resolution: 2dppx) {       
             .hero {
-              background-image: url('/images/images1/hero/hero21200.jpg');
+              background-image: url('../images/images1/hero/hero21200.jpg');
             }
           }
       }
@@ -39,7 +39,7 @@
             padding-bottom: 200px;   
             max-width: 1600px;
             background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url('/images/images1/hero/hero1480.jpg');
+            url('../images/images1/hero/hero1480.jpg');
             background-color: var(--bgr-color);        
             background-repeat: no-repeat;
             background-position: center;
